# diagonal-difference

./: CMakeLists.txt  main.cpp
cmake/: include_googlebenchmark.cmake  include_googletest.cmake
source/: CMakeLists.txt
source/algorithms/: CMakeLists.txt
source/algorithms/benchmark/: AlgorithmsBenchmark.cpp
source/algorithms/src/: Algorithms.cpp  Algorithms.h
source/algorithms/test/: AlgorithmsTest.cpp
source/datastructures/: CMakeLists.txt
source/datastructures/benchmark/: DatastructuresBenchmark.cpp
source/datastructures/src/: Datastructures.cpp  Datastructures.h
source/datastructures/test/: DatastructuresTest.cpp
source/diagonal-difference/: CMakeLists.txt
source/diagonal-difference/benchmark/: DiagonalDifferenceBenchmark.cpp
source/diagonal-difference/src/: DiagonalDifference.cpp  DiagonalDifference.h
source/diagonal-difference/test/: DiagonalDifferenceTest.cpp
source/math/: CMakeLists.txt
source/math/benchmark/: MathBenchmark.cpp
source/math/src/: Algorithms.cpp  Math.cpp  Math.h
source/math/test/: MathTest.cpp
